--- a/src/content/posts/1/1.md
+++ b/src/content/posts/1/1.md
@@ -24,8 +24,20 @@ category: 随感
 
 一切都是值得的。
 
-*“尽管此刻我一无所有  你不懂我热爱的一切”*
+> “尽管此刻我一无所有  你不懂我热爱的一切”
 
 我将满怀希望与热爱，继续前行。
 
-写于2022年10月3日 凌晨 JackDavidZhang_HOME v1.0.1_DEV发布
+**写于2022年10月3日 凌晨 JackDavidZhang_HOME v1.0.1_DEV发布**
+
+离写下上述文字已经过去了两年，该项目在今年年末出于课程要求进行了一次修改与重构，并计划发布2.0版本，然而结果仍然不尽人意。
+
+这两年间改变了太多，我经历了一次又一次的挫折，也一次又一次认识到自己的不足。
+
+我还需要学习更多。
+
+在发布了两个Alpha版本后，我决定搁置该项目，暂时用这个网站替代原有的网站。
+
+但是热爱永远不会改变，我仍将继续前行。
+
+**写于2024年12月26日晚 ZTsubaki_HOME_fuwari投入使用**
