--- a/src/content/posts/4/4.md
+++ b/src/content/posts/4/4.md
@@ -131,7 +131,7 @@ w
 
 #### 格式化分区
 
-::: Warning
+:::warning
 
 格式化会删除分区中所有数据，请注意备份重要数据
 
@@ -263,7 +263,7 @@ locale-gen
 LANG=en_US.UTF-8
 ```
 
-::: important
+:::important
 
 在此处不要把语言直接设置为中文，tty默认不支持中文，会导致输出变成一堆方块，可以在配置好tty中文渲染支持或者进入图形界面后再改为中文
 
