--- a/src/content/posts/5/5.md
+++ b/src/content/posts/5/5.md
@@ -1,7 +1,7 @@
 ---
-title: "2024"
+title: "2024 我的故事未写完"
 published: 2024-12-31
-description: "2024"
+description: "2024年度总结"
 tags: [总结, 年度总结]
 category: 随感
 draft: false
@@ -101,7 +101,7 @@ draft: false
 
 最后的最后，我没有参加任何热闹的跨年活动，我发现我喜欢的不是热闹，而是在喜欢的故土，和喜欢的人在一起。我喜欢看到焰火承载着人们美好的心愿飞上天空，也喜欢宁静的田野上突如其来的喧闹，可惜这里不是故土，没有喜欢的人，没有焰火，更没有田野。
 
-最后，我的2024，总结下来就是几个关键词：
+我的2024，总结下来就是几个关键词：
 
 **遗憾**
 
@@ -132,7 +132,55 @@ draft: false
 我也始终满怀希望，希望平凡的自己，能有一份不甘于平凡的坚强与努力。
 
 >
+> いつかくる未来の私にとって\
+> 总有一天我想要成为能让未来的自己
 >
+> 誇れる私でいたい\
+> 感到骄傲的存在
+>
+> 真昼の空の月のように\
+> 倘若能像正午天空的月亮
+>
+> いつも強くはいられないけど\
+> 然而我一直都坚强不起来
+>
+> あの日の過ちも後悔も\
+> 那一日 过错与后悔
+>
+> 全部全部私なんだよ\
+> 这一切 全都是我啊
+>
+> 真冬の夜の冷たい心も\
+> 严冬的夜晚 冰冷刺骨的心
+>
+> 真夏の朝の気だるさも\
+> 仲夏的早上 起不来的倦怠
+>
+> 悲しみに暮れた君の涙も\
+> 你沉溺于悲伤 掉的眼泪也好
+>
+> 無駄なことはひとつもないよ\
+> 这其中没有一样 是毫无意义的
+>
+> 大事なことはいつだって\
+> 值得珍重的那些事物
+>
+> 目を離した隙に消えてしまうんだ\
+> 总是一离开我的视线 就瞬间消失
+>
+> もう過ぎ去ったあの日に向かって\
+> 尽管心仍向着已经逝去的那一日
+>
+> 手を伸ばしたって触れないけれど\
+> 哪怕伸出手也还是无法触及
+>
+> ありがとう全ての日々よ\
+> 但我们仍感谢所有度过的每一天
+>
+> 真昼の空の月 \
+> ——アビドス高等学校対策委員会
 >
 
 就像2023年初听到的那首歌，我的故事未写完。
+
+<iframe width="100%" height="468"  src="//player.bilibili.com/player.html?isOutside=true&bvid=BV1JG4y1W7ub&t=35.371416" scrolling="no" border="0" frameborder="no" framespacing="0" allowfullscreen="true"></iframe>
