--- a/src/content/posts/4/4.md
+++ b/src/content/posts/4/4.md
@@ -81,7 +81,7 @@ timedatectl
 
 :::important
 
-BIOS启动模式下的安装方式请自行查看ArchWiki
+BIOS启动模式下的安装方式请自行查看[ArchWiki](https://wiki.archlinuxcn.org/wiki/%E9%A6%96%E9%A1%B5)
 
 :::
 
@@ -652,7 +652,7 @@ exec = ...
 
 ##### 外观
 
-`LOOK AND FEEl`分类，详见hyprland WIKI
+`LOOK AND FEEl`分类，详见[Hyprland WIKI](https://wiki.hyprland.org/)
 
 #####  输入
 
@@ -665,7 +665,7 @@ gestures {
 }
 ```
 
-其他详见
+其他详见[Hyprland WIKI](https://wiki.hyprland.org/)
 
 #####  按键绑定
 
