--- a/src/content/posts/9/9.md
+++ b/src/content/posts/9/9.md
@@ -1,8 +1,8 @@
 ---
 title: C++基础其一：基础元素
 published: 2025-02-05
-description: 2025年春，C++复习笔记，主要参考C++ Primer Plus第6版
-tags: [C/C++, 编程语言, 学习笔记]
+description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
+tags: [C/C++, 编程语言, 笔记]
 category: 技术
 draft: false
 ---
@@ -16,7 +16,7 @@ draft: false
 - 20世纪90年代，ANSI与ISO联合制定了`C++`的第一个标准`ISO/IEC 14882:1998`，并获得了ISO, IEC和ANSI批准，称为`C++98`，在最初的`C++`基础上还加入了`STL`、运行阶段类型识别、模板和异常
 - 2003年，`ISO/IEC 14882:2003`发布，主要对上一版进行修订，没有改变语言特性，故常用`C++98`表示`C++98/C++2003`
 - 2011年，`ISO/IEC 14882:2011`发布，增加了一些特性，称为`C++11`，也是目前比较常用的版本
-- 此后陆续发布的版本有`C++14`、`C++17`、`C++20`，均添加了一些新的特性
+- 此后陆续发布的版本有`C++14`、`C++17`、`C++20`、`C++23`、`C++26`
 
 ### 1.2. C++的特点
 
@@ -173,6 +173,12 @@ K-->B
 
   把警告视为错误，遇到警告会终止编译
 
+  ```bash
+  g++ -o t t.cpp -w
+  ```
+
+  忽略所有警告，在编译大型项目时用来快速定位错误
+
 - 动态库选项
 
   ```bash
@@ -193,9 +199,77 @@ K-->B
   g++ -o t t.cpp -std=c++17
   ```
 
-## 2. 基本数据类型
+## 2. 关键字与标识符
 
-## 3. 语句
+### 2.1. 关键字
 
-## 4. 流程控制
+关键字是计算机语言中的词汇，这些词有特殊的意义，不能用作他用。
+
+各标准中出现的`C++`关键字如下
+
+| C++98               |               |                 |           |                  |           |            |          |
+| ------------------- | ------------- | --------------- | --------- | ---------------- | --------- | ---------- | -------- |
+| and                 | and_eq        | asm             | auto      | bitand           | bitor     | bool       | break    |
+| case                | catch         | char            | class     | compl            | const     | const_cast | continue |
+| default             | delete        | do              | double    | dynamic_cast     | else      | enum       | explicit |
+| export              | extern        | false           | float     | for              | friend    | goto       | if       |
+| inline              | int           | long            | mutable   | namespace        | new       | not        | not_eq   |
+| private             | protected     | public          | register  | reinterpret_cast | return    | short      | signed   |
+| sizeof              | static        | static_cast     | struct    | switch           | template  | this       | throw    |
+| true                | try           | typedef         | typeid    | typename         | union     | unsigned   | using    |
+| virtual             | void          | volatile        | wchat_t   | while            | xor       | xor_eq     |          |
+
+| C++11               |               |                 |           |                  |           |            |          |
+| ------------------- | ------------- | --------------- | --------- | ---------------- | --------- | ---------- | -------- |
+| alignas             | alignof       | char16_t        | char32_t  | constexpr        | decltype  | noexcept   | nullptr  |
+| static_assert       | thread_local  |                 |           |                  |           |            |          |
+
+| C++20               |               |                 |           |                  |           |            |          |
+| ------------------- | ------------- | --------------- | --------- | ---------------- | --------- | ---------- | -------- |
+| char8_t             | concept       | consteval       | constinit | co_await         | co_return | co_yield   | requires |
+
+| C++26               |               |                 |           |                  |           |            |          |
+| ------------------- | ------------- | --------------- | --------- | ---------------- | --------- | ---------- | -------- |
+| contract_assert     |               |                 |           |                  |           |            |          |
+
+| TM TS/reflection TS |               |                 |           |                  |           |            |          |
+| ------------------- | ------------- | --------------- | --------- | ---------------- | --------- | ---------- | -------- |
+| atomic_cancel       | atomic_commit | atomic_noexcept | reflexpr  | synchronized     |           |            |          |
+
+:::note
+
+`TM TS`和`reflection TS`是非`ISO C++`的`C++`标准，各编译器支持程度不同
+
+:::
+
+### 2.2. 标识符
+
+标识符是用来标记变量，函数名等的符号，通俗讲就是各种“名字”
+
+符合以下规则的是`C++`中的合法标识符
+
+- 只包含大写字母、小写字母（区分大小写）、数字和下划线
+- 不能以下划线开头
+- 不能是`C++`的关键字
+- 理论上没有长度限制，但不同编译器可能会存在长度限制
+
+:::note
+
+由下划线开头的标识符往往是系统使用的，不建议使用下划线开头的标识符
+
+:::
+
+虽然满足上述要求就是合法的标识符，但是不同标识符往往会遵守一些约定俗成的编码规范/命名方案以便于阅读。
+
+## 3. 基本数据类型
+
+### 3.1. 整型
+
+
+
+## 4. 语句
+
+## 5. 流程控制
+
+## 6. 运算符
 
