--- a/src/content/posts/9/9.md
+++ b/src/content/posts/9/9.md
@@ -265,6 +265,72 @@ K-->B
 
 ### 3.1. 整型
 
+- `char`：1字节
+- `short`：至少16位，通常是16位
+- `int`：至少与`short`一样长，通常是32位
+- `long`：至少32位，且至少与`int`一样长，通常是32位
+- `long long`：至少64位，且至少与`long`一样长，通常是64位
+
+:::note
+
+计算机中有符号数常采用补码表示法
+
+正数首位为0，负数首位为1，对于$N$位的补码$-a(0 < a < 2^{N-1})$，其原码表示的数字就是$2^N-a$，这样以来，我们可以轻松处理在0附近从正数减到负数时的退位溢出问题而不用额外考虑复杂的符号变换，同时正数也能兼容无符号数
+
+另一方面，符号不同的补码也可以直接相加，即$a+(-b)=a+(2^N-b)=a-b$，计算机内部计算减法时也可以直接将其转化成负数然后计算，非常易用
+
+当对补码取相反数时，只需将原码按位取反再加1即可
+
+这样一来，原数字变成相反数的过程中，低位的0全部变成1，加上1后一直进位，直到遇见1（取反后是0），那么互为相反数的补码就只有最低位到第一个1的位置是一样的，高位都互为相反数，我们把这个相同的数字叫`lowbits`，即`lowbits=a&(-a)`，数学上是该数字最大的2的幂因子，这个技巧在一些算法中非常有用
+
+根据上面分析不难看出，$N$位补码可表示的范围就是$-2^{N-1} \sim 2^{N-1}-1$，$2^{N-1}-1$上溢后会变成$-2^{N-1}$，反之$-2^{N-1}$下溢就是$2^{N-1}-1$
+
+:::
+
+:::tip
+
+`char`是用来存储字符的数据类型，但也常会被用作存储较小的数字
+
+`char`用来存储`ASCII`字符时，其数字就是字符对应的`ASCII`编码
+
+当`char`用来存储`Uincode`字符时，负数表示该字节与后面的字节构成完整字符，该字节没有达到字符编码的末尾
+
+存储`Unicode`字符还会使用`wchar_t`（一般为`short`，因编译器而异）和`C++11`新增的`char16_t`和`char32_t`
+
+:::
+
+### 3.2. 无符号整型
+
+在上面的有符号整型前加上`unsigned`即为对应的无符号类型
+
+$N$位无符号数的范围即为$0\sim 2^N-1$
+
+实际上，`unsigned`是`unsigned int`的简写，同理，`signed`也是`signed int`的简称，而`short`，`int`，`long`，`long long`实际上是`signed short`，`signed int`，`signed long`，`signed long long`的简写
+
+#### 整型书写方法
+
+- 十进制数：直接书写，无前导0
+- 八进制数：含前导0
+- 十六进制数：含前导0x
+
+- 不带任何后缀的数字会被存储为`int`，超过`int`范围的会被依次存储为`long`，`long long`
+- 带后缀`l/L`，`ll/LL`会分别被存储为`long`，`long long`
+- 带后缀`u/U`，`ul/UL`，`ull/ULL`会分别被存储为`unsigned int`，`unsigned long`，`unsigned long long`
+
+### 3.3. 浮点数
+
+- `float`：至少32位，通常是32位
+- `double`：至少是48位，通常是64位
+- `long double`：至少和`double`一样长，通常是128位
+
+:::note
+
+计算机中的小数通常采用浮点表示法，故称为浮点数，数据分为符号位、有效数和指数，浮点数的实际值表示为$(-1)^{符号位}\times 有效数\times 2^{指数}$，指数按照偏移量的方式处理负数，不同长度的浮点数有不同的分配方式，详见[IEEE 754](https://standards.ieee.org/ieee/754/6210/)标准
+
+:::
+
+#### 浮点数表示法
+
 
 
 ## 4. 语句
