--- a/src/content/posts/9/9.md
+++ b/src/content/posts/9/9.md
@@ -1,6 +1,7 @@
 ---
 title: C++基础其一：基础元素
 published: 2025-02-05
+updated: 2025-02-25
 description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
 tags: [C/C++, 编程语言, 笔记]
 category: 技术
@@ -37,31 +38,6 @@ draft: false
 `(类)Unix`平台通常使用`g++`，`Windows`平台下可通过安装`Microsoft Visual Studio`使用`MSVC`，或者使用针对`Windows`平台构建的`GUN`软件包（如`MinGW`）中的`g++`。
 
 ### 1.4. g++编译C++程序的流程
-
-```mermaid
-graph TB
-A(源代码 *.cpp/*.cxx)
-B[预处理器]
-A-->B
-C[编译器]
-B-->C
-D(汇编代码 *.s)
-C-->D
-E[汇编器]
-D-->E
-F(目标代码 *.o)
-E-->F
-G(启动代码)
-H(库代码)
-I[连接器]
-H-->I
-F-->I
-G-->I
-J(可执行程序)
-I-->J
-K(包含文件 *.h/*.hpp)
-K-->B
-```
 
 ![](1.png)
 
@@ -242,6 +218,28 @@ K-->B
 
 :::
 
+:::note
+
+`C++`关键字中有一部分是为了替代特殊符号的运算符而出现的标记符号，功能与运算符完全相同，如下表
+
+ 
+
+|   标记   | 含义 |
+| :------: | :--: |
+|  `and`   | `&&` |
+| `and_eq` | `&=` |
+| `bitand` | `&`  |
+| `bitor`  | `|`  |
+| `compl`  | `~`  |
+|  `not`   | `!`  |
+| `not_eq` | `!=` |
+|   `or`   | `||` |
+| `or_eq`  | `|=` |
+|  `xor`   | `^`  |
+| `xor_eq` | `^=` |
+
+:::
+
 ### 2.2. 标识符
 
 标识符是用来标记变量，函数名等的符号，通俗讲就是各种“名字”
@@ -325,17 +323,301 @@ $N$位无符号数的范围即为$0\sim 2^N-1$
 
 :::note
 
-计算机中的小数通常采用浮点表示法，故称为浮点数，数据分为符号位、有效数和指数，浮点数的实际值表示为$(-1)^{符号位}\times 有效数\times 2^{指数}$，指数按照偏移量的方式处理负数，不同长度的浮点数有不同的分配方式，详见[IEEE 754](https://standards.ieee.org/ieee/754/6210/)标准
+计算机中的小数通常采用浮点表示法，故称为浮点数，数据分为符号位、有效数和指数，浮点数的实际值表示为$(-1)^S\times A\times 2^N$（$S$为符号位，$A$为有效数，$N$为指数），指数按照偏移量的方式处理负数，不同长度的浮点数有不同的分配方式，详见[IEEE 754](https://standards.ieee.org/ieee/754/6210/)标准
 
 :::
 
 #### 浮点数表示法
 
+- 直接表示
 
+- E表示法
 
-## 4. 语句
+  用`E`或`e`加上数字表示小数点移动（十进制），如`1e2`表示`100`，`2.5E-2`表示`0.025`
 
-## 5. 流程控制
+- 不带任何后缀的浮点数会被存储为`double`类型
+- 带后缀`f/F`会被存储为`float`类型
+- 带后缀`l/L`会被存储为`long double`类型
 
-## 6. 运算符
+:::important
 
+浮点数精度有限，在要求精度较高时会使用整数和固定的指数代替浮点数
+
+:::
+
+### 3.4. 布尔型
+
+- `bool`：1位，表示`true(1)`或`false(0)`
+
+:::tip
+
+对于当前使用的编译器，各种数据类型的最大最小值都作为常量被包含在`climits`头文件中，主要有以下值
+
+||||
+| --------- | --------- | ---------- |
+| CHAR_BIT  | CHAR_MAX  | CHAR_MIN   |
+| SCHAR_MAX | SCHAR_MIN | UCHAR_MAX  |
+| SHRT_MAX  | SHRT_MIN  | USHRT_MAX  |
+| INT_MAX   | INT_MIN   | UINT_MAX   |
+| LONG_MAX  | LONG_MIN  | ULONG_MAX  |
+| LLONG_MAX | LLONG_MIN | ULLONG_MAX |
+
+而如果要使用确定长度的变量，可以使用`cints`中的`int8_t`，`int16_t`，`int32_t`和`uint8_t`，`uint16_t`，`uint32_t`及由CPU字长决定的`size_t`
+
+:::
+
+## 4. 运算符
+
+### 4.1. 算术运算符
+
+- `+`：算术加法
+
+- `-`：算术减法
+- `*`：算术乘法
+- `/`：算术除法，当两个操作数都是整数时，舍去结果的小数部分
+- `%`：求模，取余数，操作数必须是整数
+
+#### 4.2. 赋值运算符、组合赋值运算符
+
+- `=`：将右侧值赋给左侧
+- `+=`：将左侧变量加上右侧的值
+- `-=`：将左侧变量减去右侧的值
+- `*=`：同上
+- `/=`：同上
+- `%=`：同上
+- `++`：左/右侧变量自增1，并返回变量原先/更改后的值，根据代码中符号和变量位置关系可以直观判断先运算还是先返回值
+- `--`：左/右侧变量自减1，并返回变量原先/更改后的值，根据代码中符号和变量位置关系可以直观判断先运算还是先返回值
+
+#### 4.3. 关系运算符
+
+- `==`：相等
+- `<`：小于
+- `>`：大于
+- `<=`：小于等于
+- `>=`：大于等于
+- `!=`：不等于
+
+#### 4.4. 逻辑运算符
+
+- `||`：逻辑或
+- `&&`：逻辑与
+- `!`：逻辑非
+
+#### 4.5. 条件运算符
+
+- `?:`：`condition?expr1:expr2`与`if`语句基本相同，若`condition`为`true`则表达式的值为`expr1`的值，反之则为`expr2`的值，`expr1`和`expr2`必须是相同的类型
+
+#### 4.6. 逗号运算符
+
+- `,`：用于拼接两个表达式，常用在`for`循环中，整个表达式的值是逗号后面的值
+
+#### 4.7. 按位运算符
+
+- `<<`：左移位，右边用0填充，可实现快速乘2
+- `>>`：右移位，左边用符号位填充（无符号填充0），可实现快速除2
+- `~`：按位取反
+- `|`：按位或
+- `&`：按位与
+- `^`：按位异或
+
+以上按位运算符均可和赋值运算符组成组合赋值运算符
+
+#### 4.8. 其它运算符
+
+- `.`/`->`：成员运算符
+- `*`：解引用
+- `&`：取地址
+- `.*`/`->*`：成员解引用
+- `new`：动态分配内存
+- `delete`：动态回收内存
+- `sizeof`：返回操作数的内存大小（单位字节）
+- `alignof`：返回对应类型在内存中的对齐方式
+- `noexcept`：指出函数不会引发异常
+
+#### 4.9. 运算符优先级、结合性与顺序点
+
+- 运算符优先级：`C++`运算符有一定的优先级，在一个表达式中有多个运算符时，编译器会优先考虑优先级高的先算，其次考虑结合性，可以使用括号调节优先级
+- 运算符结合性：当优先级相同的两个运算符作用于同一个对象时，`C++`会考虑按照结合性从左到右或者从右到左结合，但一般推荐使用括号明确顺序以增加可读性并避免潜在问题
+- 顺序点：有的运算符（自增、自减）会产生副作用，调用函数也可能产生副作用，`C++`保证在遇到顺序点时计算出所有的副作用。顺序点包括分号、逗号运算符和完整表达式（不被其它表达式包含的表达式），如`(i++) + (++i)`中，`(i++)`和`(++i)`都不是完整表达式，`C++`不保证在计算加法时计算出任何一者的副作用，该表达式在不同编译器上可能产生不同效果
+
+## 5. 语句
+
+`C++`是由一系列语句组成的命令式语言，每个语句都以`;`结尾
+
+#### 5.1. 声明语句
+
+`type name;`
+
+声明一个变量，程序将根据变量类型分配一块合适的内存空间
+
+也可以声明一个外部变量的引用，此时不会分配内存空间，而是提供一个访问外部变量的名称
+
+多个同类型的变量可以一起声明
+
+`type name1 name2 name3;`
+
+#### 5.2. 赋值语句
+
+`name = value;`
+
+将`value`的值赋给`name`变量，左边必须是一个变量，而右边可以是字面值，也可以是表达式
+
+声明语句和赋值语句可以合并为`type name = value;`
+
+注意多个变量同时声明时，必须单独分别赋值，无法同时赋值，如`type var1 var2 = value;`实际上只给`var2`赋值了
+
+多个赋值语句也可以合并，如`var1 = var2 = var3 = value;`将同时给3个变量赋同样的值
+
+:::tip
+
+在`C++11`中，在赋值和声明语句结合时可以使用`auto`关键字作为类型名，编译器将根据赋值表达式的类型自动推断类型
+
+:::
+
+#### 5.3. 表达式语句
+
+在`C++`中，任何一个合法的表达式，包括函数调用，都可以是一个合法的语句，表达式的值可以被直接忽略
+
+如`1+2;`，`pow(2,2)*3;`
+
+:::note
+
+一般认为表达式都是有值的，故赋值语句一般也认为是赋值表达式
+
+表达式都是语句，但语句不一定是表达式，声明语句就没有对应的值
+
+::::
+
+#### 5.4. 流程控制语句
+
+用于控制程序的运行流程的语句，详见下节
+
+## 6. 流程控制
+
+### 6.1. 分支语句
+
+#### if语句
+
+```cpp 
+if(test-condition)
+    //if-statement
+else
+    //else-statement
+```
+
+如果`test-condition`为真，执行`if-statement`，否则执行`else-statement`
+
+`else`和`else-statement`可以省略，`if-statement`也可以省略，当然，不能同时省略
+
+`if-statement`和`else-statement`默认只包含一条语句，可以使用大括号来扩展成语句块
+
+`else`后面可以再接`if`，形成多分支结构
+
+#### switch语句
+
+```cpp
+switch(integer-expression)
+{
+    case label1 : statements
+    case label2 : statements
+        ...
+    default : statements
+}
+```
+
+`switch`接收一个整型表达式，每个`label`为一个整型常量，该语句会匹配所有`label`，并找到相等的执行后面的语句
+
+需要注意的是，不同于`if`，`switch`会执行`case`块中的每一条语句直到下一个`case`，不需要使用大括号，同时也不会停止匹配，这样会降低运行效率，所以需要在`case`块中使用`break;`语句手动跳出`switch`语句
+
+`default`块会匹配任意的表达式值作为默认运行的代码，可以省略，如果没有手动使用`break`，程序可能会再次匹配`default`块，出现运行两次的情况
+
+:::note
+
+实际开发中，分支往往是慢慢添加的，故`switch`语句并不常用，更常用长`if-else`结构，可以方便增加分支，语法更灵活，也不用担心忘记`break;`，如下所示
+
+```cpp
+if(condition1)
+{   
+}else if(condition2)
+{
+}else{
+}
+```
+
+:::
+
+### 6.2. 循环语句
+
+#### while语句
+
+```cpp
+while(test-condition)
+    bady
+```
+
+`while`接收一个`test-condition`，若为真则执行`body`，同`if`一样，它只会执行一条语句，可以用大括号让它执行一个语句块
+
+每次循环结束，`while`语句都会重新计算一次`test-condition`，只要`test-condition`为真，它就会一直运行下去
+
+:::note
+
+由于非0值会被转换为`true`的特点，语句`while(T--)`会刚好运行`T`次（`T`是正整数变量），可以简化代码用
+
+:::
+
+有时也会使用`while`的变体`do-while`
+
+```cpp
+do
+    bady
+while(test-condition)
+```
+
+该语句会先执行`body`再判断`test-condition`
+
+#### for语句
+
+```cpp
+for(init-statement;condition;expression)
+    bady
+```
+
+该语句会运行一次`init-statement`，然后根据循环条件`condition`的值作为循环条件进入循环，并在每次循环结束时执行一次更新表达式`expression`
+
+实际上相当于以下内容
+
+```cpp
+init-statement;
+while(condition)
+{
+    bady
+    expression;
+}
+```
+
+值得注意的是，`init-statement`是一个语句而非表达式，这意味着它可以接受声明语句
+
+`for`常搭配自增/自减运算符使用，如`for(int i = 1;i <= 10;i ++)`将从1到10枚举`i`，并运行10次
+
+`for`循环中`init-statement`和`expression`都可以省略，但是分号不能省略
+
+#### break与continue
+
+`break`和`continue`语句是由单一个关键字组成的流程控制语句
+
+`break`可以跳出循环，用于`while`，`for`和`switch`
+
+`continue`则可以跳过本次循环，直接进入下一次，不过还是要测试对应的循环条件，`for`循环中也会正常运行更新表达式，用于`for`和`while`
+
+`break`和`continue`都只能跳出最内层循环，如果需要跳出多层循环，需要搭配分支语句使用
+
+## 7.注释
+
+注释是程序中用来说明代码的部分，编译时会被去除
+
+养成良好的注释习惯可以帮助自己和他人理解代码
+
+`C++`中有两种注释
+
+- 单行注释：双斜杠`//`后面直到行末的所有内容都会被视为注释
+- 多行注释：`/**`和`**/`之间，无论多少行都会被视为注释
