--- a/src/content/posts/11/11.md
+++ b/src/content/posts/11/11.md
@@ -4,7 +4,7 @@ published: 2025-02-26
 description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
 tags: [C&C++, 编程语言, 笔记]
 category: 技术
-draft: true
+draft: false
 ---
 
 ## 2.1. 包含文件
