--- a/src/content/posts/12/12.md
+++ b/src/content/posts/12/12.md
@@ -41,7 +41,7 @@ $C^m_n\mod{2}=\begin{cases}0,a\ne b+c\\1,a= b+c\end{cases}$
 
 设$n=a_0\times 2^0+a_1\times 2^1+a_2\times 2^2+\cdots+a_i\times 2^i$，有
 
-$\begin{align}a&=\lfloor\dfrac{a_0\times 2^0+\cdots+a_i\times 2^i}{2}\rfloor+\lfloor\dfrac{a_0\times 2^0+a_1\times 2^1+\cdots+a_i\times 2^i}{2^2}\rfloor+\cdots+\lfloor\dfrac{a_0\times 2^0+a_1\times 2^1+\cdots+a_i\times 2^i}{2^i}\rfloor\\&=\dfrac{a_1\times 2^1+a_2\times 2^2+\cdots+a_i\times 2^i}{2}+\dfrac{a_2\times 2^2+a_3\times 2^3+\cdots+a_i\times 2^i}{2^2}+\cdots+\dfrac{a_i\times 2^i}{2^i}\\&=(a_1+a_2\times 2^1+\cdots+a_i\times 2^{i-1})+(a_2+a_3\times 2^1+\cdots+a_i\times 2^{i-2})\\&=a_1+a_2(2^0+2^1)+a_3(2^0+2^1+2^2)+\cdots+a_i(2^0+2^1+\cdots+2^{i-1})\\&=a_0(2^0-1)+a_1(2^1-1)+a_2(2^2-1)+\cdots+a_i(2^i-1)\\&=\sum^{i}_{j=0}{a_j(2^j-1)}=\sum^{i}_{j=0}{a_j2^j}-\sum^{i}_{j=0}a_j=n-\sum^{i}_{j=0}a_j\end{align}$
+$$a=\lfloor\dfrac{a_0\times 2^0+a_1\times 2^1+\cdots+a_i\times 2^i}{2}\rfloor+\lfloor\dfrac{a_0\times 2^0+a_1\times 2^1+\cdots+a_i\times 2^i}{2^2}\rfloor+\cdots+\lfloor\dfrac{a_0\times 2^0+a_1\times 2^1+\cdots+a_i\times 2^i}{2^i}\rfloor\\=\dfrac{a_1\times 2^1+a_2\times 2^2+\cdots+a_i\times 2^i}{2}+\dfrac{a_2\times 2^2+a_3\times 2^3+\cdots+a_i\times 2^i}{2^2}+\cdots+\dfrac{a_i\times 2^i}{2^i}\\=(a_1+a_2\times 2^1+\cdots+a_i\times 2^{i-1})+(a_2+a_3\times 2^1+\cdots+a_i\times 2^{i-2})+\cdots+a_i\\=a_1+a_2(2^0+2^1)+a_3(2^0+2^1+2^2)+\cdots+a_i(2^0+2^1+\cdots+2^{i-1})\\=a_0(2^0-1)+a_1(2^1-1)+a_2(2^2-1)+\cdots+a_i(2^i-1)\\=\sum^{i}_{j=0}{a_j(2^j-1)}=\sum^{i}_{j=0}{a_j2^j}-\sum^{i}_{j=0}a_j=n-\sum^{i}_{j=0}a_j$$
 
 不难发现，$\sum^{i}_{j=0}a_j$就是$n$的二进制中$1$的数目
 
