--- a/src/content/posts/4/4.md
+++ b/src/content/posts/4/4.md
@@ -3,7 +3,7 @@ title: Arch Linux简单安装配置
 published: 2024-12-27
 updated: 2025-01-31
 description: 记录KDE、Hyprland桌面环境下Arch Linux的安装配置和简单美化
-tags: [Linux, Arch Linux, 配置, Hyprland]
+tags: [Linux, Arch Linux, Hyprland]
 category: 技术
 draft: false
 ---
