--- a/src/content/posts/5/5.md
+++ b/src/content/posts/5/5.md
@@ -2,7 +2,7 @@
 title: "2024 我的故事未写完"
 published: 2024-12-31
 description: "2024年度总结"
-tags: [总结, 年度总结]
+tags: [总结]
 category: 随感
 draft: false
 ---
