--- a/src/content/posts/9/9.md
+++ b/src/content/posts/9/9.md
@@ -3,7 +3,7 @@ title: C++基础其一：基础元素
 published: 2025-02-05
 updated: 2025-02-25
 description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
-tags: [C&C++, 编程语言, 笔记]
+tags: [C&C++, 笔记]
 category: 技术
 draft: false
 ---
