--- a/src/content/posts/10/10.md
+++ b/src/content/posts/10/10.md
@@ -2,7 +2,7 @@
 title: 离散数学其一：集合论
 published: 2025-02-23
 description: 2025年春，离散数学课程笔记
-tags: [离散数学, 数学, 笔记]
+tags: [离散数学, 笔记]
 category: 理论
 draft: true
 ---
