--- a/src/content/posts/11/11.md
+++ b/src/content/posts/11/11.md
@@ -97,6 +97,12 @@ g++ -o ./hello hello.h hello.cpp main.cpp
 
 :::
 
+:::important
+
+头文件中的代码会在每个文件中被重复运行，故请不要在头文件中包含任何变量声明（可以声明常量）、函数实现（内联函数、虚函数除外）
+
+:::
+
 ## 2.2. 宏定义
 
 `#define`指令会定义一个宏，可以用作标识，也可以用作文本替换
