--- a/src/content/posts/14/14.md
+++ b/src/content/posts/14/14.md
@@ -12,6 +12,17 @@ draft: true
 
 在`C++`中，函数由两部分组成
 
-- 函数声明/函数定义：提供函数名、返回值和参数列表，每个调用函数的文件中都要声明函数
-- 函数原型/函数实现：提供函数的具体内容，每个程序中每个函数必须且只能有一个函数实现
+- 函数原型/函数声明：提供函数名、返回值和参数列表，每个调用函数的文件中都要声明函数，一般写在头文件里
+- 函数定义/函数实现：提供函数的具体内容，每个程序中每个函数必须且只能有一个函数实现
 
+### 1.1. 函数原型
+
+函数原型是编译器与函数之间的接口。一个项目中函数往往分布在不同的文件中，甚至有时候是在编译好的库文件中，在链接之前，编译器需要为这些函数预留位置，这就必须知道函数的名称、参数和返回值，这样才能保证与外部函数正常链接。
+
+函数原型的语法如下
+
+```cpp
+type func(type,type,...);
+```
+
+其中，每个函数有一个**返回值**，也是就函数调用语句的类型，如果设置成`void`则表示没有返回值。**函数名**必须是一个合法的标识符，而且不能与其它标识符重复，**函数参数**则可以只提供类型，也可以提供类型和名称，设置成`void`或者留空表示没有参数。
