--- a/src/content/posts/14/14.md
+++ b/src/content/posts/14/14.md
@@ -5,7 +5,7 @@ updated: 2025-03-04
 description: 2025年春，C++复习笔记
 tags: [C&C++, 笔记]
 category: 技术
-draft: true
+draft: false
 ---
 
 # 1. 函数
@@ -25,7 +25,7 @@ draft: true
 type func(type,type,...);
 ```
 
-其中，每个函数有一个**返回值**，也是就函数调用语句的类型，如果设置成`void`则表示没有返回值。**函数名**必须是一个合法的标识符，而且不能与其它标识符重复，**函数参数**则可以只提供类型，也可以提供类型和名称，设置成`void`或者留空表示没有参数。
+其中，每个函数有一个**返回值**，也是就函数调用语句的类型，如果设置成`void`则表示没有返回值。**函数名**必须是一个合法的标识符，而且不能与其它标识符重复，**函数参数**则可以只提供类型，也可以提供类型和名称，设置成`void`或者留空表示没有参数
 
 ### 1.2. 函数定义
 
@@ -193,9 +193,145 @@ type fun(type name,type name2 = value2,type name3 = value3)
 
 运算符重载也有一定限制，我们无法更改运算符的操作数个数与顺序，也无法更改运算符的优先级与结合性，这一特点使我们在被重载的运算符用途与原先用途逻辑上区别很大时要格外注意优先级，如`C++`中对流的操作重载的左右移位运算符，它们的优先级不是最低的，在操作数是复杂的表达式时，稍不小心就会产生优先级问题
 
+在上一节的例子中，汇编代码中函数名相比源代码加了一些字符，这就是编译器为了区别重载函数而做的名称修饰
+
 :::
 
 ### 2.5. 函数模板
 
+有时我们需要对很多种变量类型进行相同的操作，如果对每种可能得变量都编写一个函数，会十分复杂，于是`C++`中引入了对泛型的支持，具体到函数中就是函数模版
+
+函数模版允许我们规定一个抽象的类型，当调用时，再根据具体使用的类型生成特定的函数，语法如下
+
+```cpp
+template <typename T>//此处的typename是关键字，T才是模版类型的名字
+void templ(T,T);
+
+template <typename T>
+void templ(T a,T b)
+{
+ 	//...
+}
+```
+
+函数内就将`T`视为一种类型用，也可以在尖括号里定义多个模版类型
+
+:::note
+
+函数模版不是通常意义上的函数，编译器在遇到函数调用时才会根据函数调用的类型生成对应类型的函数实例，我们叫做**实例化**，如果调用模板的类型不支持模版中某种操作也会在此时报错
+
+同时，模版在调用时才实例化，也就是说在调用时才定义函数的实例，模版本身并不定义函数，只是生成函数的模版，因此，函数模版一般被放在头文件中，以供各个文件实例化自己的函数，这时，函数模版的原型和定义分开就没什么必要性了，一般不会分开写
+
+:::
+
+除了在调用时进行隐式实例化，也可以手动进行显式实例化定义
+
+```cpp
+template void templ<type>(type,type);
+```
+
+显式实例化定义会定义一个函数，它不应该被放在头文件中
+
+更常用的一种操作是，在调用函数时进行显式实例化
+
+```cpp
+templ<type>(a,b);
+```
+
+这样不管`a,b`是什么类型，编译器都会实例化一个`type`类型的模版，然后正常调用这个函数
+
+最后，如果某个类型需要特殊处理，我们还可以对模版进行**具体化**
+
+```cpp
+template<> void templ<type>(type,type);
+
+template<> void templ<type>(type a,type b){
+    \\...
+}
+```
+
+和普通函数一样，具体化函数也有函数原型和函数体，函数原型放在头文件中，而函数体放在某一个文件中即可，上面的`<type>`是可选的，编译器会根据后面的类型自动推断
+
+:::note
+
+加入模版后，我们的函数还是免不了产生很多歧义
+
+这种时候，编译器会将所有隐式类型转换范围内允许的函数列表，之后按顺序匹配：
+
+- 值到引用、引用到值、数组到指针、指针到类型，以及变量到常量这些无关紧要的转换
+- 从小到大的类型提升
+- 从大到小，产生精度损失的转换
+- 自定义的类型转换
+
+如果最佳匹配中还是有多个，则
+
+- 如果需要转换的数目不一样，选择需要转换数目最小的
+- 模版函数与普通函数，优先选择普通函数
+- 具体化函数与实例化函数，优先选择具体化函数
+- 显式实例化函数与隐式实例化函数，优先选择隐式实例化函数
+
+如果还是有多个匹配的，编译器将会产生二义性错误，终止编译
+
+:::
+
+:::tip
+
+在使用模版时，还可能出现不知道返回值类型的情况
+
+我们在模版中调用与模版类型相关的函数或者运算符时，并不知道返回的值的类型，无法确定保存这个值用的变量的类型，一个解决方案是用`auto`关键字，另一个方案是使用`decltype`
+
+`decltype()`可以当作一个类型名使用，如果括号里是标识符，则是标识符对应的类型，如果括号里是函数调用，则是函数的返回值，如果是非标识符的左值（左值在第3节介绍），如括号括起来的标识符，则是左值类型的引用，如果括号里是表达式，则是表达式的类型
+
+搭配`auto`和后置返回值语法，还可以有如下用法
+
+```cpp
+template<typename T1,typename T2>
+auto add(T1 x,T2 y) -> decltype(x+y)
+{
+    return x+y;
+}
+```
+
+:::
+
 ## 3. 引用变量
 
+在传递函数的参数时，程序内部会将函数参数复制一份，这种做法效率较低，同时，函数也不能改变原先传参给函数那个变量的值，要是引入指针又未免过于复杂，于是`C++`引入了**引用**的概念
+
+我们可以使用如下语法创建一个引用：
+
+```cpp
+type & name = var;
+```
+
+这将创建一个`type`类型的引用，指向`var`这个变量
+
+这里的`type &`是一个完整的类型，`&`是类型名的一部分，而不是运算符
+
+函数左边必须是一个**左值**
+
+:::note
+
+左值原本指在赋值语句左边的值，相对应的是右值，但是出现`const`常量后，这一定义产生了分歧，最后的结论是，**左值**指在内存中有实体的，可被引用的值，比如变量，常量，指针等等，而**右值**就是在内存中没有实体，不可被引用的值，如表达式，常量字面值等
+
+:::
+
+一旦引用声明后，它就不能更改引用对象，对它的所有操作都等同于对引用对象的操作，它就是引用对象的另一个标识符，它们代表相同的一块内存区域，这实际上和常量指针是一样的
+
+引用可以被隐式转换成普通类型，而普通类型只有左值会被隐式转换成引用，右值只能被隐式转换成常量指针（这会创建一个临时变量），如果试图将右值转换成变量指针，一些编译器仍然会创建临时变量，并抛出一个警告，另一些则会直接抛出警告终止编译
+
+可以将引用作为函数的参数，此时调用函数时，编译器会自动对左值创建引用，函数通过操作参数就可以直接操作调用函数时作为参数的左值
+
+如果只是将引用用来避免值传递，建议将参数设为`const`，这样编译器会自动为右值也创建临时变量，而且常量也可以用作参数了（区别于值传递，值传递时仅传递数值，不对原先的变量产生影响，故不用管是左值还是右值，是常量还是变量），在此基础上如果返回值也是参数之一，可以返回一个常量引用，以此避免值传递（返回变量引用会导致函数调用变成左值，非常奇怪，而且返回的这个引用和参数完全一样，要更改可以更改原先的参数，不必是变量）
+
+:::tip
+
+在传递大型对象，像结构体、类的时候，我们一般会选择引用传递，以此避免大量值复制过去复制过来，如果只是个基本变量的话，使用引用往往是为了更改变量的值，不用更改值的话没必要用引用
+
+:::
+
+:::warning
+
+使用引用作为返回值时要注意，只能引用参数或全局变量，不能引用函数内部定义的量，这些量在函数结束后就会被回收，会导致引用指向未分配的内存区域，产生严重后果
+
+:::
