Update 14, 15(not finish) Create 20, 21, 22, 23, 24

--- a/src/content/posts/14/14.md
+++ b/src/content/posts/14/14.md
@@ -113,9 +113,9 @@ objdump -S a.out
     1144:	c3                   	ret
 ```
 
-可以看到，调用每个函数时，函数会将原先的堆栈基指针`rbp`压入栈，然后将当前堆栈顶指针的值赋予`rbp`作为新函数的栈底，接着从寄存器取出参数，定义变量，都依次放在栈顶之后（栈地址从高向低生长），最后把返回值放在`edi`寄存器，将原先压入栈的旧堆栈基指针重新弹出到`rbp`中，并更改程序计数器返回原先的函数中
+可以看到，调用每个函数时，函数会将原先的帧指针`rbp`压入栈，然后将当前栈指针的值赋予`rbp`作为新函数的栈底，接着从寄存器取出参数，定义变量，都依次放在栈顶之后（栈地址从高向低生长），最后把返回值放在`edi`寄存器，将原先压入栈的旧帧指针重新弹出到`rbp`中，并更改程序计数器返回原先的函数中
 
-在这个过程中，每次调用函数，都会把原先函数的堆栈基指针和程序计数器信息（在`call`和`ret`指令中被操作）保存在栈中，函数没有结束时，局部变量也会一直保存在栈中不清除，而栈的空间往往是有限的，过深的递归会导致栈空间被占满，程序异常退出，而且递归过程反复移动值，效率也不高，因此只要能用循环代替递归就尽量不要用大规模的递归
+在这个过程中，每次调用函数，都会把原先函数的帧指针和程序计数器信息（在`call`和`ret`指令中被操作）保存在栈中，函数没有结束时，局部变量也会一直保存在栈中不清除，而栈的空间往往是有限的，过深的递归会导致栈空间被占满，程序异常退出，而且递归过程反复移动值，效率也不高，因此只要能用循环代替递归就尽量不要用大规模的递归
 
 :::
 
@@ -163,7 +163,7 @@ int main()
 
 :::
 
-`main`函数接收两个参数（如果不需要，也可以省略），一个`int`，一个`char**`，分别称`argc`和`argv`，`argc`表示程序参数的数目，`argv`是一个二维`char`数组，也是一个字符串组成的一维数组，存储`argc`个字符串，即系统调用该可执行程序时传入的参数
+`main`函数接收三个参数（如果不需要，也可以省略），一个`int`，两个`char**`，分别称`argc`,`argv`和`envp`，`argc`表示程序参数的数目，`argv`是一个二维`char`数组，也是一个字符串组成的一维数组，存储`argc`个字符串，即系统调用该可执行程序时传入的参数，`envp`是存储系统环境变量的字符串数组，最后一项为空指针，标记结尾
 
 ### 2.3. 默认参数
 
