--- a/src/content/posts/5/5.md
+++ b/src/content/posts/5/5.md
@@ -85,7 +85,7 @@ draft: false
 
 高铁的速度很快，快到我来不及防备，大山不见了，代之的是一湾江水，是我带着父母第一次出远门，当年那个弱不禁风的小孩也长大了。上午在初升的太阳中告别，下午已经在热浪中来到了江城。
 
-显然，相比四季如春的云南，外面的天气实在让人无法忍受，匆匆几天无趣的游玩之后，最后一天，我们坐在了学校路边的石阶上，看着太阳落下，沉默者看着来来往往的人——都结束了，一切都结束了，遗憾也好，欢乐也罢，说不清是怀念还是什么的，总之是怅然若失。
+显然，相比四季如春的云南，外面的天气实在让人无法忍受，匆匆几天无趣的游玩之后，最后一天，我们坐在了学校路边的石阶上，看着太阳落下，沉默着看着来来往往的人——都结束了，一切都结束了，遗憾也好，欢乐也罢，说不清是怀念还是什么的，总之是怅然若失。
 
 我送别了父母。后来的日子里，我像一只无头的苍蝇，四处乱撞。我参加了班委竞选，又参加了一系列算法竞赛，然而结果却不尽人意，或者说本来基础就弱。同时又加入了几个团队，各种各样的事务应接不暇，我试图寻找一瞬的安宁，但是事实是我根本停不下来。
 
@@ -131,55 +131,54 @@ draft: false
 
 我也始终满怀希望，希望平凡的自己，能有一份不甘于平凡的坚强与努力。
 
->
-> いつかくる未来の私にとって\
+>いつかくる未来の私にとって\
 > 总有一天我想要成为能让未来的自己
->
-> 誇れる私でいたい\
+> 
+>誇れる私でいたい\
 > 感到骄傲的存在
->
-> 真昼の空の月のように\
+> 
+>真昼の空の月のように\
 > 倘若能像正午天空的月亮
->
-> いつも強くはいられないけど\
+> 
+>いつも強くはいられないけど\
 > 然而我一直都坚强不起来
->
-> あの日の過ちも後悔も\
+> 
+>あの日の過ちも後悔も\
 > 那一日 过错与后悔
->
-> 全部全部私なんだよ\
+> 
+>全部全部私なんだよ\
 > 这一切 全都是我啊
->
-> 真冬の夜の冷たい心も\
+> 
+>真冬の夜の冷たい心も\
 > 严冬的夜晚 冰冷刺骨的心
->
-> 真夏の朝の気だるさも\
+> 
+>真夏の朝の気だるさも\
 > 仲夏的早上 起不来的倦怠
->
-> 悲しみに暮れた君の涙も\
+> 
+>悲しみに暮れた君の涙も\
 > 你沉溺于悲伤 掉的眼泪也好
->
-> 無駄なことはひとつもないよ\
+> 
+>無駄なことはひとつもないよ\
 > 这其中没有一样 是毫无意义的
->
-> 大事なことはいつだって\
+> 
+>大事なことはいつだって\
 > 值得珍重的那些事物
->
-> 目を離した隙に消えてしまうんだ\
+> 
+>目を離した隙に消えてしまうんだ\
 > 总是一离开我的视线 就瞬间消失
->
-> もう過ぎ去ったあの日に向かって\
+> 
+>もう過ぎ去ったあの日に向かって\
 > 尽管心仍向着已经逝去的那一日
->
-> 手を伸ばしたって触れないけれど\
+> 
+>手を伸ばしたって触れないけれど\
 > 哪怕伸出手也还是无法触及
->
-> ありがとう全ての日々よ\
+> 
+>ありがとう全ての日々よ\
 > 但我们仍感谢所有度过的每一天
->
-> 真昼の空の月 \
+> 
+>真昼の空の月 \
 > ——アビドス高等学校対策委員会
->
+> 
 
 就像2023年初听到的那首歌，我的故事未写完。
 
