--- a/src/content/posts/7/7.md
+++ b/src/content/posts/7/7.md
@@ -1,5 +1,5 @@
 ---
-title: 图论算法其二：树的存储与遍历
+title: 图论算法二：树的存储与遍历
 published: 2025-01-19
 description: 图论算法系列第二篇，讲解树的两种存储方式和二叉树的遍历与还原
 tags: [图论,算法,树]
