--- a/src/content/posts/8/8.md
+++ b/src/content/posts/8/8.md
@@ -1,5 +1,5 @@
 ---
-title: 图论算法其三：树的简单应用
+title: 图论算法三：树的简单应用
 published: 2025-01-20
 description: 图论算法系列第三篇，讲解哈夫曼树、哈希表、字符搜索树这些树的简单应用。
 tags: [图论,算法,树]
