--- a/src/content/posts/9/9.md
+++ b/src/content/posts/9/9.md
@@ -1,8 +1,8 @@
 ---
-title: C++基础其一：基础元素
+title: C++基础一：基础元素
 published: 2025-02-05
 updated: 2025-02-25
-description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
+description: 2025年春，C++复习笔记
 tags: [C&C++, 笔记]
 category: 技术
 draft: false
@@ -114,6 +114,14 @@ draft: false
   ```
 
   额外包含库搜索目录，`L`后面直接加目录名称，无空格
+
+- 包含头文件
+
+  ```cpp
+  g++ -o t t.cpp -IDIR
+  ```
+
+  包含额外头文件搜索目录，指尖括号内系统头文件的搜索路径
 
 - 调试选项
 
@@ -310,10 +318,10 @@ $N$位无符号数的范围即为$0\sim 2^N-1$
 - 十进制数：直接书写，无前导0
 - 八进制数：含前导0
 - 十六进制数：含前导0x
-
 - 不带任何后缀的数字会被存储为`int`，超过`int`范围的会被依次存储为`long`，`long long`
 - 带后缀`l/L`，`ll/LL`会分别被存储为`long`，`long long`
 - 带后缀`u/U`，`ul/UL`，`ull/ULL`会分别被存储为`unsigned int`，`unsigned long`，`unsigned long long`
+- 单个字符使用单引号括起来表示
 
 ### 3.3. 浮点数
 
