--- a/src/content/posts/11/11.md
+++ b/src/content/posts/11/11.md
@@ -1,7 +1,7 @@
 ---
-title: C++基础其二：编译指令
+title: C++基础二：编译指令
 published: 2025-02-26
-description: 2025年春，C++复习笔记，参考C++ Primer Plus第6版
+description: 2025年春，C++复习笔记
 tags: [C&C++, 笔记]
 category: 技术
 draft: false
