--- a/src/content/posts/3/3.md
+++ b/src/content/posts/3/3.md
@@ -1,8 +1,8 @@
 ---
-title: C++递归与暴力枚举
+title: 递归与暴力枚举
 published: 2023-01-08
 description: 刑
-tags: [C&C++,算法]
+tags: [算法]
 category: 技术
 draft: false
 ---
