Add 21,22,23,24 Update 16 Change 13

--- a/src/content/posts/13/13.md
+++ b/src/content/posts/13/13.md
@@ -161,6 +161,16 @@ std::cout << (e1==value2);//true
 
 也因为如此，枚举可以被当作整数直接使用，但整数不能当作枚举量使，不过我们任然可以通过强制类型转换把整数转换成枚举，如果该整数对应某个枚举量，那么该枚举就是那个枚举量，否则，该枚举不等于任何枚举量，而如果整数超出了该枚举的值的范围，那就会引发未知的错误，总之，不要把整数值强制转换成枚举
 
+相同作用域内的枚举不能设置相同的枚举值
+
+:::note
+
+`C++11`引入了一种作用域内枚举，使用`enum class`或者`enum struct`声明的枚举，其枚举值的作用域为类作用域，使用时必须使用`enum_name::value`标明名称空间，这样不同枚举就处于不同的作用域，可以使用重复的枚举值了
+
+作用域内枚举同时禁止了枚举值到整型的隐式类型转换，但任然可以强制转换
+
+:::
+
 ### 2.4. 其它
 
 类、指针都是复合类型，但由于其内容较多，我们会在后面单独讨论
