--- a/src/content/posts/21/21.md
+++ b/src/content/posts/21/21.md
@@ -1,9 +1,9 @@
 ---
-title: 交叉编译与QEMU仿真调试ARM SVE、SME应用
+title: 基于张量积的矩阵乘法分块
 published: 2025-03-25
-description:  使用交叉编译配合QEMU模拟器在x86设备上运行调试SVE与SME应用程序
-tags: [ARM, SIMD]
-category: 技术
+description: 使用张量积分解矩阵乘法以使用基于张量积的矩阵运算加速
+tags: [线性代数, HPC]
+category: 理论
 draft: true
 ---
 
