--- a/src/content/posts/22/22.md
+++ b/src/content/posts/22/22.md
@@ -1,9 +1,9 @@
 ---
-title: 基于ARM的矩阵乘法优化
+title: ARM SVE, SME基础
 published: 2025-03-25
-description: 分解GEMM中的矩阵乘操作，利用ARM的SVE与SME技术实现SIMD加速
-tags: [科学计算, ARM, SIMD, HPC]
-category: 理论
+description: ARM的最新SIMD指令集拓展SVE与SME基础概念与ACLE Intrinsics使用
+tags: [ARM, SIMD]
+category: 技术
 draft: true
 ---
 
