--- a/src/content/posts/23/23.md
+++ b/src/content/posts/23/23.md
@@ -1,9 +1,10 @@
 ---
-title: ARM SVE, SME基础
+title: 尘埃落定
 published: 2025-03-25
-description: ARM的最新SIMD指令集拓展SVE与SME基础概念与ACLE Intrinsics使用
-tags: [ARM, SIMD]
-category: 技术
+description: 2025年3月，参赛后记
+tags: [总结, HPC]
+category: 随感
 draft: true
 ---
 
+北京这座城市并不欢迎所有的外来者。
