--- a/src/content/posts/6/6.md
+++ b/src/content/posts/6/6.md
@@ -59,7 +59,7 @@ draft: false
 
 #### 3 叶子节点，内部节点
 
-一个没有子节点的节点称为**叶子节点**，非叶子节点为**内部节点**。
+一个没有子节点的节点称为**叶子节点**，非叶子节点为**内部节点**（根节点除外）。
 
 #### 4 度
 
@@ -75,7 +75,7 @@ draft: false
 
 #### 5 深度、高度、层
 
-有根树$T$中从根节点$r$到节点$x$的一条简单路径长度即为$x$的**深度**，从$x$到叶子节点的最长简单路径上边的数目即为$x$的**高度**，树的一个**层**包含了同一深度的所有节点。**树的高度**是指树中节点的**最大深度**。
+有根树$T$中从根节点$r$到节点$x$的一条简单路径长度（路径中的边数）即为$x$的**深度**，从$x$到叶子节点的最长简单路径上边的数目即为$x$的**高度**，树的一个**层**包含了同一深度的所有节点。**树的高度**是指树中节点的**最大深度**。
 
 根节点的深度为$0$，叶子节点的高度为$0$。
 
