--- a/src/content/posts/8/8.md
+++ b/src/content/posts/8/8.md
@@ -66,5 +66,14 @@ draft: false
 7. *基数转换法
 8. *全域散列法
 
-## 字符搜索树
+## 2. 字符搜索树
 
+字符搜索树，又叫Tire树，字典树，核心思想是以字符作为树的节点，以一条完整的路径作为一个字符串（含`\0`）
+
+通过字符搜索树，我们可以快速查询大量字符串中前缀的数量，或者查找某个字符串的数量，与`AC自动机`结合后还能实现大量字符串的匹配
+
+## 3. 二叉搜索树
+
+在二叉树的每个节点上填入数字，并严格按照`左子树<根<右子树`的顺序排列，就可以形成一个基本的二叉搜索树，在数据足够平均的最理想状态下，可以实现以$$O(\log n)$$复杂度查找第`k`大的数字或查找某个数字的位置
+
+最差的情况下，二叉搜索树会退化到$$O(n)$$的复杂度，因此在二叉搜索树的基础上我们衍生出了很多平衡二叉树，此处不再赘述
