--- a/src/content/posts/5/5.md
+++ b/src/content/posts/5/5.md
@@ -31,7 +31,7 @@ draft: false
 
 在高楼之上，我几乎听不见下面的声音，只看看着人群与车流川流不息。下雨时，我能看到烟雨中模糊的城市，看到沸腾的小湖泊，而我的周围是那样的安静。某天晚上，我就坐在窗台上，窗外的霓虹缓缓移动，城市在慢慢睡去，霓虹是它夜里的吐息，向日葵静静生长着，金鱼也安静游弋，我看着书，听着歌，我喜欢这样的感觉。
 
-可是，宁静总是暂时的。我也经历过风暴，在猩红的月光下，疯狂的风和凛冽的雨滴全部汇聚到我的身上，整个城市像是一个巨兽，摇晃的数目是它的牙齿，高耸的楼房好像要把我淹没。
+可是，宁静总是暂时的。我也经历过风暴，在猩红的月光下，疯狂的风和凛冽的雨滴全部汇聚到我的身上，整个城市像是一个巨兽，摇晃的树木是它的牙齿，高耸的楼房好像要把我淹没。
 
 我也观察过细雨中匆匆的人们，也试过在细雨中行走，可是冰冷的雨后却还是冰冷的现实。
 
