--- a/src/content/posts/5/5.md
+++ b/src/content/posts/5/5.md
@@ -115,7 +115,7 @@ draft: false
 
 **热爱**
 
-至今还记得高中时听到的一句话，“热爱可抵岁月长”，一路的热爱撑着我走到了这里，我也向我所热爱的事业迈出了不那么完美的第一步，也算是认识了一群志同道合的人，置于未来走向如何，就交给未来吧。我想，我有足够的热爱，总能见到光亮的吧。
+至今还记得高中时听到的一句话，“热爱可抵岁月长”，一路的热爱撑着我走到了这里，我也向我所热爱的事业迈出了不那么完美的第一步，也算是认识了一群志同道合的人，至于未来走向如何，就交给未来吧。我想，我有足够的热爱，总能见到光亮的吧。
 
 我不知道出口在哪，我参加了算法竞赛，拖了后腿，被淘汰了，参加了CSP，刷了两遍才达标，最后放弃了参加蓝桥杯，参加了超算队，准备打HPC比赛，却什么都还不会，我没有时间，也没有傲人的天赋，没有系统学习过，总归是略逊一筹，只有一腔热血，却无能为力了。
 
