Change cover for 23

--- a/src/content/posts/23/23.md
+++ b/src/content/posts/23/23.md
@@ -3,9 +3,10 @@ title: 尘埃落定
 published: 2025-03-25
 updated: 2025-05-06
 description: 2025年3月，参赛后记，2025年5月，随感
+image: ./0.jpg
 tags: [总结, HPC]
 category: 随感
-draft: true
+draft: false
 ---
 
 北京这座城市并不欢迎所有的外来者。
@@ -65,8 +66,6 @@ draft: true
 我试图说服自己自己很棒，自己值得，可是又告诉自己自己不配...
 
 后面几天在西宁周边旅行，青藏高原上有西部熟悉的气息，春夏之交，冻土上已经少见裸露的冰层，不过草原还是接近枯黄的颜色。青海湖上的冰层也已经化开，候鸟成群结队飞舞，在蓝天的背景之上，演绎着自由。
-
-![青海湖的候鸟](./3.jpg)
 
 大部分时间，我们开着车，在草原与高山之间奔驰，看着牛羊成群在草甸上漫步，看着刚刚融化的冰水在大地上绘出溪流，看着车尾在无人的高原上扬起的阵阵尘埃。
 
