--- a/src/content/posts/21/21.md
+++ b/src/content/posts/21/21.md
@@ -1,9 +1,61 @@
 ---
-title: 基于张量积的矩阵乘法分块
+title: 基于向量张量积的矩阵乘法分块
 published: 2025-03-25
-description: 使用张量积分解矩阵乘法以使用基于张量积的矩阵运算加速
+updated: 2025-07-14
+description: 使用张量积分解矩阵乘法以使用基于向量张量积的矩阵运算加速
 tags: [线性代数, HPC]
 category: 理论
-draft: true
+draft: false
 ---
 
+## 1. 张量积
+
+此处讨论针对两个向量的张量积。
+
+向量的张量积，即外积(outer product)，是矩阵克罗内克积的一种特例，对于一个$$m\times1$$的列向量$$u$$，一个$$1\times n$$的行向量$$v$$，其张量积$$A$$是一个$$m\times n$$的矩阵，记为$$u\otimes v$$，有
+
+$$u\otimes v = A = uv$$
+
+即$$\begin{bmatrix}a_{1}\\a_{2}\\\vdots\\a_{m}\end{bmatrix}\otimes\begin{bmatrix}b_{1}&b_{2}&\cdots&b_{n}\end{bmatrix}=\begin{bmatrix}a_1b_1&a_1b_2&\cdots&a_1b_n\\a_2b_1&a_2b_2&\cdots&a_2b_n\\\vdots&\vdots&\ddots&\vdots\\a_mb_1&a_mb_2&\cdots&a_mb_n\end{bmatrix}$$
+
+:::note
+
+此处的外积(outer product，符号$$\otimes$$)与叉积(cross product，符号$$\times$$，有时也叫外积)不一样，需注意区分
+
+:::
+
+更多定义见[Wikipedia](https://en.wikipedia.org/wiki/Outer_product)
+
+根据定义，外积也具有一些矩阵乘法的性质，如
+
+$$(u_1+u_2)\otimes v=u_1\otimes v+u_2\otimes v$$
+
+$$u\otimes(v_1+v_2)=u\otimes v_1+u\otimes v_2$$
+
+## 2. 基于张量积分解矩阵乘法
+
+根据定义，我们可以分析出将矩阵乘法转换为张量积运算的方法：
+
+设$$A$$为$$n\times k$$矩阵，而$$B$$为$$k\times m$$矩阵，$$A=\begin{bmatrix}a_1&a_2&\cdots&a_k\end{bmatrix}$$，$$a_i$$为$$n\times1$$的列向量，$$B=\begin{bmatrix}b1&b2&\cdots&b_k\end{bmatrix}^T$$，$$b_i$$为$$1\times m$$的行向量，则
+
+$$AB=a_1\otimes b_1+a_2\otimes b_2 + \cdots + a_k\otimes b_k$$
+
+## 3. 分块进行张量积运算
+
+大部分处理器的向量运算拓展都有（相对特定机器）固定的向量长度，不可能无限大，在实际工程中需要将上述向量分成较小的单元进行运算，设向量长度为$$s$$，我们可以进一步将$$a_i$$，$$b_i$$分解
+
+$$a_i=\begin{bmatrix}a_{i1}\\a_{i2}\\\vdots\\a_{ip}\end{bmatrix},p=n/s,b_i=\begin{bmatrix}b_{i1}&b_{i2}&\cdots&b_{iq}\end{bmatrix},q=m/s$$
+
+可以写为
+
+$$a_i =\begin{bmatrix}a_{i1}\\0\\\vdots\\0\end{bmatrix}+\begin{bmatrix}0\\a_{i2}\\\vdots\\0\end{bmatrix}+\cdots+\begin{bmatrix}0\\0\\\vdots\\a_{ip}\end{bmatrix}$$
+
+$$b_i=\begin{bmatrix}b_{i1}&0&\cdots&0\end{bmatrix}+\begin{bmatrix}0&b_{i2}&\cdots&0\end{bmatrix}+\cdots+\begin{bmatrix}0&0&\cdots&b_{iq}\end{bmatrix}$$
+
+ 那么
+
+$$a_i\otimes b_i=\begin{bmatrix}a_{i1}\otimes b_{i1}&a_{i1}\otimes b_{i2}&\cdots&a_{i1}\otimes b_{iq}\\a_{i2}\otimes b_{i1}&a_{i2}\otimes b_{i2}&\cdots&a_{i2}\otimes b_{iq}\\\vdots&\vdots&\ddots&\vdots\\a_{ip}\otimes b_{i1}&a_{ip}\otimes b_{i2}&\cdots&a_{ip}\otimes b_{iq}\end{bmatrix}$$
+
+$$AB=\sum^k_{i=1}a_i\otimes b_i,(AB)_{ij}=\sum_{t=1}^ka_{ti}\otimes b_{tj}$$
+
+即$$A$$中的列的分块与$$B$$中同编号的行的分块相乘，结果的位置由分块在列/行中的位置决定
